# filework

./: .env.example  .gitignore  .typesafe-i18n.json  AGENTS.md  CHANGELOG.md  README.md  biome.json  components.json  electron-builder.yml  electron-vite.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.tsbuildinfo
.claude/: settings.local.json
.github/workflows/: ci.yml
content/changelog/: 20260309-initial-project-setup.md  20260315-llm-stop-functionality-fix.md  20260328-ai-handlers-refactoring.md  20260413-ai-pipeline-optimizations.md  20260414-usage-panel-and-error-ux.md  20260418-ai-execution-optimization.md  20260418-craft-agents-optimizations.md  20260418-plan-substeps.md
content/spec/: design-system.md  icp-guide.md  marketing-guide.md  onboarding-story.md  optimization-hermes-agent.md  product-design.md  vi.md
docs/: ai-integration.md  capability-eval.md  data-architecture.md  debugging.md  gaia.md  llm-configuration.md  mcp-authentication.md  pi-inspired-changes.md  sandbox.md  skills-system.md  subagent.md  testing.md  workflows.md
docs/plans/: 2026-06-29-office-preview-pipeline.md  2026-06-30-subagent-capabilities.md  2026-07-13-chat-context-compaction-design.md  2026-07-13-chat-context-compaction.md  2026-07-22-codex-style-shared-browser.md
native/filework-native/: .gitignore  Cargo.toml  package.json
native/filework-native/src/: dedup.rs  lib.rs  office_preview.rs  scan.rs  search.rs  stats.rs  walker.rs
scripts/: sign-native-addons.mjs
src/main/: index.ts  proxy-bootstrap.ts  proxy-fetch.ts
(+694 files in other folders)
