[package]
name = "filework-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi6"] }
napi-derive = "2"
jwalk = "0.8"
blake3 = "1"
rayon = "1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
